Setup errorprone and resolve issues